# guides/swagger.yaml
@@ -44,11 +44,27 @@ paths:
                 $ref: "#/components/schemas/File"
         "404":
           description: "file not found"
+  /audios/{audio_id}/slots:
+    get:
+      summary: Lists available slots.
+      tags:
+        - slot
+      parameters:
+        - name: audio_id
+          in: path
+          description: "ID of audio"
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: "successful operation"
   /audios/{audio_id}/slots/{slot}:
     post:
       summary: Fill slot with file.
       tags:
         - file
+        - slot
       parameters:
         - name: audio_id
           in: path
